<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/marginMedium"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textSelect"
        android:textSize="@dimen/textSizeLarge"/>

    <Switch
        android:id="@+id/checkStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkStart"
        android:textSize="@dimen/textSizeMedium"/>

    <LinearLayout
        android:id="@+id/linearSub"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textFavorite"
            android:textSize="@dimen/textSizeLarge"/>

        <RadioGroup
            android:id="@+id/rg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/marginMedium">
            <RadioButton
                android:id="@+id/radioPuppy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radioPuppy"
                android:textSize="@dimen/textSizeMedium"/>
            <RadioButton
                android:id="@+id/radioKitty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radioKitty"
                android:textSize="@dimen/textSizeMedium"/>
            <RadioButton
                android:id="@+id/radioGyodong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radioGyodong"
                android:textSize="@dimen/textSizeMedium"/>
        </RadioGroup>

        <ImageView
            android:id="@+id/imgV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/gyodong"
            android:layout_marginBottom="@dimen/marginSmall"
            android:scaleType="fitXY"/>
        <Button
            android:id="@+id/btnFinish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginMedium"
            android:text="@string/btnFinish"/>
        <Button
            android:id="@+id/btnInit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginMedium"
            android:text="@string/btnInit"/>

    </LinearLayout>
</LinearLayout>